--- a/packages/dev-agent/dev-server/index.html
+++ b/packages/dev-agent/dev-server/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Vybcel Toolbar Development</title>
+  <title>Phion Toolbar Development</title>
   <style>
     * {
       margin: 0;
@@ -135,7 +135,7 @@
 
   <div class="demo-content">
     <div class="card">
-      <h2>Welcome to Vybcel Development</h2>
+      <h2>Welcome to Phion Development</h2>
       <p>This page simulates a real project where you can test how the toolbar looks and behaves. The toolbar should appear at the top with a black border around the entire viewport.</p>
       <a href="#" class="button">Get Started</a>
     </div>
